5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1831_1639.log
== TEST (2019-06-13 17:13:06) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos: ")))

acum = 0

print(v1)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:23:14) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))

par = 0

for i in range(size(v1)):
	if( i % 2 == 0):
	par = par + 1
	
	
	
print(v1)
print(par)
-- ERROR:
File "XXXX", line 8
    par = par + 1
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:23:32) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))

par = 0

for i in range(size(v1)):
	if( i % 2 == 0):
	par = par + 1
	
	
	
print(v1)
print(par)
-- ERROR:
File "XXXX", line 8
    par = par + 1
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:23:59) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))

par = 0

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	
	
print(v1)
print(par)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:24:15) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))

par = 0

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	
	
print(v1)
print(par)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:35:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

#r = array(zeros(???, dtype = int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
		if(v1[i] % 2 == 0):
			r[1] = r[1] + 1
	
print(v1)
print(par) #1 - quantas turmas tem quant par de alunos OK
print() #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:36:17) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype = int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
		if(v1[i] % 2 == 0):
			r[1] = r[1] + 1
	
print(v1)
print(par) #1 - quantas turmas tem quant par de alunos OK
print() #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:36:48) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype = int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
		#if(v1[i] % 2 == 0):
		#	r[1] = r[1] + 1
	
print(v1)
print(par) #1 - quantas turmas tem quant par de alunos OK
print() #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:37:20) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype = int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
		#if(v1[i] % 2 == 0):
		#	r[1] = r[1] + 1
	
print(par) #1 - quantas turmas tem quant par de alunos OK
print() #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:38:16) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype = int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
		#if(v1[i] % 2 == 0):
		#	r[1] = r[1] + 1
	
print(par) #1 - turmas com quant par de alunos OK
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:38:55) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype = int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
		#if(v1[i] % 2 == 0):
		#	r[1] = r[1] + 1
	
print(par) #1 - turmas com quant par de alunos OK
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:47:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	for i in range(size(v1)):
		if( )
		#if(v1[i] % 2 == 0):
		#	r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
File "XXXX", line 12
    if( )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:47:47) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	for i in range(size(v1)):
		if(v1[i] % 2 == 0):
		#	r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
File "XXXX", line 15
    print(par)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:47:56) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	for i in range(size(v1)):
		if(v1[i] % 2 == 0):
		#	r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
File "XXXX", line 15
    print(par)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:47:59) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	for i in range(size(v1)):
		if(v1[i] % 2 == 0):
		r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
File "XXXX", line 13
    r[1] = r[1] + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:48:04) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
File "XXXX", line 15
    print(par)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:48:08) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(par), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:49:10) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:51:22) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- EXECUTION TIME:
0.721562
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
7
[0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
5
[0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
5
[0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:51:30) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:51:31) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- EXECUTION TIME:
0.711138
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
7
[0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
5
[0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
Quantidade de alunos por turma: 5
[0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:52:00) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:52:03) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:52:05) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:52:07) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:52:12) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- EXECUTION TIME:
1.87673
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
Quantidade de alunos por turma: 7
[0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
Quantidade de alunos por turma: 5
[0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
Quantidade de alunos por turma: 5
[0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:52:13) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- EXECUTION TIME:
2.91102
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
Quantidade de alunos por turma: 7
[0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
Quantidade de alunos por turma: 5
[0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
Quantidade de alunos por turma: 5
[0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:52:13) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- EXECUTION TIME:
4.04836
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
Quantidade de alunos por turma: 5
[0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
Quantidade de alunos por turma: 5
[0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:52:19) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:53:34) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

r = array(zeros(size(v1), dtype=int))

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:55:53) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
r = array(zeros(par), dtype=int)
	
	#for i in range(size(v1)):
		#if(v1[i] % 2 == 0):
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:57:15) 
-- CODE:
from numpy import*
v1 = array(eval(input("Quantidade de alunos por turma: ")))
par = 0

for i in range(size(v1)):
	if( i % 2 == 0):
		par = par + 1
	
r = array(zeros(par), dtype=int)
	
	for i in range(size(v1)):
		
		#r[1] = r[1] + 1
	
print(par)
print(r) #2 - vetores pares [n x y]
-- ERROR:
File "XXXX", line 11
    for i in range(size(v1)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
